<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroud">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="100dp"
      android:layout_marginEnd="60dp"
      android:onClick="goToKamikadze"
      android:scaleType="fitXY"
      android:src="@mipmap/ic_kamikadze_foreground"
      tools:ignore="SpeakableTextPresentCheck" />

  <TextView
      android:layout_width="151dp"
      android:layout_height="63dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="10dp"
      android:layout_marginBottom="10dp"
      android:onClick="toDeletAll"
      android:text="@string/reset_data"
      android:textSize="18dp"
      android:textStyle="bold"
      android:background="@drawable/style_cigan"
      android:gravity="center"
      android:textAllCaps="true"
      android:textColor="#5A5A5A"/>

  <TextView
      android:layout_width="151dp"
      android:layout_height="63dp"
      android:layout_alignParentRight="true"
      android:layout_alignParentBottom="true"
      android:layout_marginRight="10dp"
      android:layout_marginBottom="10dp"
      android:onClick="goToAbout"
      android:text="@string/about"
      android:textSize="18dp"
      android:textStyle="bold"
      android:background="@drawable/style_cigan"
      android:gravity="center"
      android:textColor="#5A5A5A"/>

  <TextView
      android:id="@+id/Text_4"
      android:layout_width="100dp"
      android:layout_height="56dp"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="13dp"
      android:layout_marginEnd="15dp"
      android:gravity="center"
      android:text="10000"
      android:textColor="@color/text_color"
      android:textSize="25sp" />

  <TextView
      android:id="@+id/Balance"
      android:layout_width="150dp"
      android:layout_height="56dp"
      android:layout_alignParentTop="true"
      android:layout_marginTop="13dp"
      android:layout_marginEnd="0dp"
      android:layout_toStartOf="@+id/Text_4"
      android:gravity="center"
      android:text="@string/your_balance"
      android:textColor="@color/text_color"
      android:textSize="25sp" />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_marginStart="60dp"
      android:layout_marginTop="100dp"
      android:onClick="goToRulet"
      android:scaleType="fitXY"
      android:src="@mipmap/ic_torulet_foreground"
      tools:ignore="SpeakableTextPresentCheck" />


</RelativeLayout>